--- a/index.html
+++ b/index.html
@@ -7,38 +7,47 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | E-commerce product page</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;600;700&family=Rubik:wght@500&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
+  <header>
+    <ul id="navbar">
+      <li class="nav-item">Collections</li>
+      <li class="nav-item">Men</li>
+      <li class="nav-item">Women</li>
+      <li class="nav-item">About</li>
+      <li class="nav-item">Contact</li>
+    </ul>
+  </header>
+  <main>
+    <div id="content">
 
-  Collections
-  Men
-  Women
-  About
-  Contact
+      Sneaker Company
 
-  Sneaker Company
+      Fall Limited Edition Sneakers
 
-  Fall Limited Edition Sneakers
+      These low-profile sneakers are your perfect casual wear companion. Featuring a 
+      durable rubber outer sole, they’ll withstand everything the weather can offer.
 
-  These low-profile sneakers are your perfect casual wear companion. Featuring a 
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
+      $125.00
+      50%
+      $250.00
 
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      0
+      Add to cart
+    </div>
+  </main>
 </body>
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/ecesarini">Ettore Cesarini</a>.
+  </footer>
 </html>
