style.css growning

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | E-commerce product page</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;600;700&family=Rubik:wght@500&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@200;300;400;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 
@@ -66,7 +66,7 @@
             <button class="desc-purchase-plus" type="button"><img src="images/icon-plus.svg" alt="add item"></button>
           </div>
           <div class="desc-purchase-add-cart">
-            <img src="images/icon-cart.svg" alt="">
+            <img src="images/icon-cart-purchase.svg" alt="svg cart">
             <span>Add to cart</span>
           </div>
         </div>
