--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             <span class="desc-purchase-count">0</span>
             <button class="desc-purchase-plus" type="button"><img src="images/icon-plus.svg" alt="add item"></button>
           </div>
-          <div class="desc-purchase-add-cart">
+          <button class="desc-purchase-add-cart">
             <img src="images/icon-cart-purchase.svg" alt="svg cart">
             <span>Add to cart</span>
-          </div>
+          </button>
         </div>
       </div>
     </div>
