--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
   <main>
     <div id="content">
       <div id="image-side">
-        <div class="product-sel"><img src="images/image-product-1.jpg" alt="product focused"></div>
+        <button class="product-sel"><img src="images/image-product-1.jpg" alt="product focused"></button>
         <div class="product-thumb">
-          <img src="images/image-product-1-thumbnail.jpg" alt="product 1 thumb">
-          <img src="images/image-product-2-thumbnail.jpg" alt="product 2 thumb">
-          <img src="images/image-product-3-thumbnail.jpg" alt="product 3 thumb">
-          <img src="images/image-product-4-thumbnail.jpg" alt="product 4 thumb">
+          <button class="tmb-btn" type="button"><img src="images/image-product-1-thumbnail.jpg" alt="product 1 thumb"></button>
+          <button class="tmb-btn" type="button"><img src="images/image-product-2-thumbnail.jpg" alt="product 2 thumb"></button>
+          <button class="tmb-btn" type="button"><img src="images/image-product-3-thumbnail.jpg" alt="product 3 thumb"></button>
+          <button class="tmb-btn" type="button"><img src="images/image-product-4-thumbnail.jpg" alt="product 4 thumb"></button>
         </div>
       </div>
       <div id="desc-side">
@@ -73,6 +73,8 @@
       </div>
     </div>
   </main>
+  <script type="module" src="js/ecpp.js"></script>
+  <script type="module" src="js/gal.js"></script>
 </body>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
