check ecpp.js TODO

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <!---<li class="nav-item nav-logo"></li>-->
         <li class="nav-item nav-top">
           <img src="images/logo.svg" alt="site logo">
-          <span>Collections</span>
-          <span>Men</span>
-          <span>Women</span>
-          <span>About</span>
-          <span>Contact</span>          
+          <button class="nav-cat" type="button"><span>Collections</span></button>
+          <button class="nav-cat" type="button"><span>Men</span></button>
+          <button class="nav-cat" type="button"><span>Women</span></button>
+          <button class="nav-cat" type="button"><span>About</span></button>
+          <button class="nav-cat" type="button"><span>Contact</span></button>
         </li>
         <li class="nav-item nav-tail">
-          <img class="nav-tail-cart" src="images/icon-cart.svg" alt="navbar cart">
-          <img class="nav-tail-avatar" src="images/image-avatar.png" alt="navbar avatar">
+          <button class="nav-btn-cart" type="button"><img class="nav-tail-cart" src="images/icon-cart.svg" alt="navbar cart"></button>
+          <button class="nav-btn-avatar" type="button"><img class="nav-tail-avatar" src="images/image-avatar.png" alt="navbar avatar"></button>
         </li>
       </ul>
       <hr class="navbar-hr">
@@ -61,9 +61,9 @@
         <div class="desc-price-old">$250.00</div>
         <div class="desc-purchase-container">
           <div class="desc-purchase-selection">
-            <button class="desc-purchase-minus" type="button"><img src="images/icon-minus.svg" alt="remove item"></button>
+            <button class="desc-purchase-addremove desc-purchase-minus" type="button"><img src="images/icon-minus.svg" alt="remove item"></button>
             <span class="desc-purchase-count">0</span>
-            <button class="desc-purchase-plus" type="button"><img src="images/icon-plus.svg" alt="add item"></button>
+            <button class="desc-purchase-addremove desc-purchase-plus" type="button"><img src="images/icon-plus.svg" alt="add item"></button>
           </div>
           <button class="desc-purchase-add-cart">
             <img src="images/icon-cart-purchase.svg" alt="svg cart">
