check ecpp.js TODO

--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
           <button class="nav-cat" type="button"><span>Contact</span></button>
         </li>
         <li class="nav-item nav-tail">
-          <button class="nav-btn-cart" type="button"><img class="nav-tail-cart" src="images/icon-cart.svg" alt="navbar cart"></button>
-          <button class="nav-btn-avatar" type="button"><img class="nav-tail-avatar" src="images/image-avatar.png" alt="navbar avatar"></button>
+          <button class="nav-tail-btn-cart" type="button">
+            <i class="nav-tail-btn-cart-i">
+              <div class="nav-tail-btn-cart-i-count"></div>
+            </i>
+            <img class="nav-tail-btn-cart-img" src="images/icon-cart.svg" alt="navbar cart">
+          </button>
+          <button class="nav-tail-btn-avatar" type="button"><img class="nav-tail-btn-avatar-img" src="images/image-avatar.png" alt="navbar avatar"></button>
         </li>
       </ul>
       <hr class="navbar-hr">
